04-notification-ui/notification-ui-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-ui-deployment
  labels:
    component: notification-ui
    app: notification
spec:
  replicas: 1
  selector:
    matchLabels:
      component: notification-ui
  template:
    metadata:
      labels:
        component: notification-ui
    spec:
      containers:
        - name: notification-ui
          image: bespinian/notification-ui:1.0.6
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 2
