04-notification-ui/notification-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-ui
  labels:
    name: notification-ui
    app: notification
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    component: notification-ui
